bt-263: * fixed cut off and font sizes

--- a/frontend/src/bundles/common/pages/not-found/styles.module.scss
+++ b/frontend/src/bundles/common/pages/not-found/styles.module.scss
@@ -1,19 +1,26 @@
 .pageContainer {
     position: relative;
+    flex-flow: column nowrap;
     height: 100vh;
     min-height: 100vh;
     max-height: 100vh;
     padding: 0 53px;
     overflow: hidden;
     background-color: var(--steel-gray);
+}
 
-    & .header {
-        padding: 61px 0 0;
-    }
+.header {
+    display: flex;
+    align-items: flex-start;
+    height: fit-content;
+    padding: 61px 0 0;
 }
 
 .text {
-    padding: 40px 0 0;
+    flex: 1 1 auto;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     color: var(--white);
     font-weight: var(--font-weight-bold);
     text-align: center;
@@ -24,15 +31,17 @@
     }
 
     & .code {
-        padding: 60px 0 0;
-        font-size: 300px;
+        // font-size: max(calc(100px + 20vh), 300px);
+        font-size: max(20vh, 300px);
         line-height: normal;
     }
 }
 
 .link {
     justify-content: center;
-    padding: 100px 0 0;
+    align-items: center;
+    height: fit-content;
+    padding: 0 0 53px;
 
     & a {
         display: block;
@@ -48,6 +57,58 @@
 
     & a:hover {
         opacity: 0.7;
+    }
+}
+
+@media screen and (width <= 660px) {
+    .pageContainer {
+        padding: 0 10px;
+    }
+
+    .header {
+        justify-content: center;
+        align-items: center;
+        padding: 30px 0;
+    }
+
+    .logo {
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+    }
+
+    .text {
+        & .description {
+            font-size: var(--font-size-h5);
+        }
+
+        & .code {
+            font-size: 100px;
+        }
+    }
+
+    .link {
+        justify-content: center;
+
+        & a {
+            font-size: var(--font-size-h3);
+        }
+    }
+}
+
+@media screen and (height <= 660px) {
+    .header {
+        padding: 15px 0;
+    }
+
+    .text {
+        & .code {
+            font-size: 80px;
+        }
+    }
+
+    .link {
+        padding: 0 0 15px;
     }
 }
 
